# realworld-axum-leptos-modified

./: .env  Cargo.toml  Dockerfile  README.md  docker-compose.yml
migrations/: 20221207194615_init.up.sql
seed/: .env  .gitignore  Cargo.toml
seed/src/: main.rs
src/: app.rs  config.rs  database.rs  main.rs
src/auth/: api.rs  auth.rs  client.rs  mod.rs  server.rs
src/components/: article_preview.rs  buttons.rs  mod.rs  navitems.rs
src/models/: article.rs  comment.rs  pagination.rs  user.rs
src/routes/: article.rs  editor.rs  home.rs  login.rs  profile.rs  settings.rs  signup.rs
