[package]
name = "seed"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = {version = "1", features = ["full"] }
rand = "0.8.4"
reqwest = { version = "0.12.5", features = ["json"] }
log = "0.4"
serde_json = "1"
env_logger = "0.10"
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
    "uuid"
] }
diesel = { version = "2.0", features = ["postgres", "chrono", "serde_json"] }
dotenv = "0.15.0"
uuid = { version = "1.10.0", features = ["v4", "serde"] }
sha2 = "0.10.8"
